--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "countdown-timer",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://wesscoby.github.io/countdown-timer",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.3.1",
     "bootstrap": "^4.1.3",
+    "gh-pages": "^1.2.0",
     "jquery": "^3.3.1",
     "popper": "^1.0.1",
     "react": "^16.4.2",
@@ -15,6 +17,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   }
 }
